--- a/src/main/webapp/app/entities/beneficiary/detail/beneficiary-detail.component.html
+++ b/src/main/webapp/app/entities/beneficiary/detail/beneficiary-detail.component.html
@@ -12,7 +12,7 @@
       <dl class="row-md jh-entity-details">
         <dt><span jhiTranslate="global.field.id">ID</span></dt>
         <dd>
-          <span>{{ beneficiary.id }}</span>
+          <span>{{ beneficiary.familyMembersId + '|' + beneficiary.annualDeclarationId }}</span>
         </dd>
         <dt><span jhiTranslate="annualDecJhApp.beneficiary.entitlementType">Entitlement Type</span></dt>
         <dd>
@@ -44,7 +44,11 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">رجوع</span>
       </button>
 
-      <button type="button" [routerLink]="['/beneficiary', beneficiary.id, 'edit']" class="btn btn-primary">
+      <button
+        type="button"
+        [routerLink]="['/beneficiary', beneficiary.familyMembersId, beneficiary.annualDeclarationId, 'edit']"
+        class="btn btn-primary"
+      >
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">تعديل</span>
       </button>
     </div>
