finally fixing  beneficiary composite id handling problem in front end 10/10 it's work

--- a/src/main/webapp/app/entities/beneficiary/delete/beneficiary-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/beneficiary/delete/beneficiary-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="beneficiary" name="deleteForm" (ngSubmit)="confirmDelete(beneficiary.familyMembersId!, beneficiary.annualDeclarationId!)">
+<form *ngIf="beneficiary" name="deleteForm" (ngSubmit)="confirmDelete(beneficiary)">
   <div class="modal-header">
     <h4 class="modal-title" data-cy="beneficiaryDeleteDialogHeading" jhiTranslate="entity.delete.title">تأكيد عملية الحذف</h4>
 
