--- a/src/main/webapp/app/entities/beneficiary/detail/beneficiary-detail.component.html
+++ b/src/main/webapp/app/entities/beneficiary/detail/beneficiary-detail.component.html
@@ -12,7 +12,7 @@
       <dl class="row-md jh-entity-details">
         <dt><span jhiTranslate="global.field.id">ID</span></dt>
         <dd>
-          <span>{{ beneficiary.familyMembersId + '|' + beneficiary.annualDeclarationId }}</span>
+          <span>{{ beneficiary.id.familyMemberId + '|' + beneficiary.id.annualDeclarationId }}</span>
         </dd>
         <dt><span jhiTranslate="annualDecJhApp.beneficiary.entitlementType">Entitlement Type</span></dt>
         <dd>
@@ -46,7 +46,7 @@
 
       <button
         type="button"
-        [routerLink]="['/beneficiary', beneficiary.familyMembersId, beneficiary.annualDeclarationId, 'edit']"
+        [routerLink]="['/beneficiary', beneficiary.id.familyMemberId, beneficiary.id.annualDeclarationId, 'edit']"
         class="btn btn-primary"
       >
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">تعديل</span>
