--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-md-9">
-    <h1 class="display-4"><span jhiTranslate="home.title">أهلا وسهلا بك، جافا هبستر!</span> (Annual Dec Jh)</h1>
+    <h1 class="display-4"><span jhiTranslate="home.title">أهلا وسهلا بك، جافا هبستر!</span></h1>
 
     <p class="lead" jhiTranslate="home.subtitle">هذه صفحتك الرئيسية</p>
 
@@ -32,47 +32,47 @@
 
     <p jhiTranslate="home.question">إذا كان لديك أي سؤال حول JHipster:</p>
 
-    <ul>
-      <li>
-        <a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.homepage"
-          >JHipster homepage</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://stackoverflow.com/tags/jhipster/info"
-          target="_blank"
-          rel="noopener noreferrer"
-          jhiTranslate="home.link.stackoverflow"
-          >JHipster on Stack Overflow</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://github.com/jhipster/generator-jhipster/issues?state=open"
-          target="_blank"
-          rel="noopener noreferrer"
-          jhiTranslate="home.link.bugtracker"
-          >JHipster bug tracker</a
-        >
-      </li>
-      <li>
-        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.chat"
-          >JHipster public chat room</a
-        >
-      </li>
-      <li>
-        <a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.follow"
-          >follow @jhipster on Twitter</a
-        >
-      </li>
-    </ul>
+    <!--    <ul>-->
+    <!--      <li>-->
+    <!--        <a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.homepage"-->
+    <!--          >JHipster homepage</a-->
+    <!--        >-->
+    <!--      </li>-->
+    <!--      <li>-->
+    <!--        <a-->
+    <!--          href="https://stackoverflow.com/tags/jhipster/info"-->
+    <!--          target="_blank"-->
+    <!--          rel="noopener noreferrer"-->
+    <!--          jhiTranslate="home.link.stackoverflow"-->
+    <!--          >JHipster on Stack Overflow</a-->
+    <!--        >-->
+    <!--      </li>-->
+    <!--      <li>-->
+    <!--        <a-->
+    <!--          href="https://github.com/jhipster/generator-jhipster/issues?state=open"-->
+    <!--          target="_blank"-->
+    <!--          rel="noopener noreferrer"-->
+    <!--          jhiTranslate="home.link.bugtracker"-->
+    <!--          >JHipster bug tracker</a-->
+    <!--        >-->
+    <!--      </li>-->
+    <!--      <li>-->
+    <!--        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.chat"-->
+    <!--          >JHipster public chat room</a-->
+    <!--        >-->
+    <!--      </li>-->
+    <!--      <li>-->
+    <!--        <a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.follow"-->
+    <!--          >follow @jhipster on Twitter</a-->
+    <!--        >-->
+    <!--      </li>-->
+    <!--    </ul>-->
 
-    <p>
-      <span jhiTranslate="home.like">إذا كنت تحب JHipster، لا تنسى أن تعطي لنا نجم على</span>
-      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github"
-        >GitHub</a
-      >!
-    </p>
+    <!--    <p>-->
+    <!--      <span jhiTranslate="home.like">إذا كنت تحب JHipster، لا تنسى أن تعطي لنا نجم على</span>-->
+    <!--      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github"-->
+    <!--        >GitHub</a-->
+    <!--      >!-->
+    <!--    </p>-->
   </div>
 </div>
