--- a/src/main/webapp/app/entities/family-member/update/family-member-update.component.html
+++ b/src/main/webapp/app/entities/family-member/update/family-member-update.component.html
@@ -98,17 +98,17 @@
           </div>
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="annualDecJhApp.familyMember.gender" for="field_gender">Gender</label>
-          <input type="text" class="form-control" name="gender" id="field_gender" data-cy="gender" formControlName="gender" />
-          <div *ngIf="editForm.get('gender')!.invalid && (editForm.get('gender')!.dirty || editForm.get('gender')!.touched)">
-            <small class="form-text text-danger" *ngIf="editForm.get('gender')?.errors?.required" jhiTranslate="entity.validation.required">
-              هذا الحقل مطلوب.
-            </small>
-          </div>
-        </div>
+        <!--        <div class="row mb-3">-->
+        <!--          <label class="form-label" jhiTranslate="annualDecJhApp.familyMember.gender" for="field_gender">Gender</label>-->
+        <!--          <input type="text" class="form-control" name="gender" id="field_gender" data-cy="gender" formControlName="gender" />-->
+        <!--          <div *ngIf="editForm.get('gender')!.invalid && (editForm.get('gender')!.dirty || editForm.get('gender')!.touched)">-->
+        <!--            <small class="form-text text-danger" *ngIf="editForm.get('gender')?.errors?.required" jhiTranslate="entity.validation.required">-->
+        <!--              هذا الحقل مطلوب.-->
+        <!--            </small>-->
+        <!--          </div>-->
+        <!--        </div>-->
 
-        <div class="row mb-3">
+        <div class="row mb-3" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-label" jhiTranslate="annualDecJhApp.familyMember.pensioner" for="field_pensioner">Pensioner</label>
           <select
             class="form-control"
