--- a/src/main/webapp/app/entities/annual-declaration/update/annual-declaration-update.component.html
+++ b/src/main/webapp/app/entities/annual-declaration/update/annual-declaration-update.component.html
@@ -17,7 +17,7 @@
           <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
-        <div class="row mb-3">
+        <div class="row mb-3" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-label" jhiTranslate="annualDecJhApp.annualDeclaration.submissionDate" for="field_submissionDate"
             >Submission Date</label
           >
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="row mb-3">
+        <div class="row mb-3" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-label" jhiTranslate="annualDecJhApp.annualDeclaration.status" for="field_status">Status</label>
           <select class="form-control" name="status" formControlName="status" id="field_status" data-cy="status">
             <option [ngValue]="null">{{ 'annualDecJhApp.DeclarationStatus.null' | translate }}</option>
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <div class="row mb-3">
+        <div class="row mb-3" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-label" jhiTranslate="annualDecJhApp.annualDeclaration.pensioner" for="field_pensioner">Pensioner</label>
           <select
             class="form-control"
