--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -150,3 +150,21 @@
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
+
+/* ==========================================================================
+Annual Declaration Status Style
+========================================================================== */
+.rejected-box {
+  background-color: red;
+  /* Add any other CSS styles for the "rejected" status here */
+}
+
+.approved-box {
+  background-color: green;
+  /* Add any other CSS styles for the "approved" status here */
+}
+
+.submitted-box {
+  background-color: blue;
+  /* Add any other CSS styles for the "submitted" status here */
+}
