validate new annual declaration to be in currents year when User roles

--- a/src/main/webapp/app/entities/annual-declaration/list/annual-declaration.component.html
+++ b/src/main/webapp/app/entities/annual-declaration/list/annual-declaration.component.html
@@ -13,6 +13,7 @@
         data-cy="entityCreateButton"
         class="btn btn-primary jh-create-entity create-annual-declaration"
         [routerLink]="['/annual-declaration/new']"
+        *ngIf="!isLastADCurrentYear()"
       >
         <fa-icon icon="plus"></fa-icon>
         <span jhiTranslate="annualDecJhApp.annualDeclaration.home.createLabel"> Create a new Annual Declaration </span>
